Changelog

26-03-25

    Changes:
    - Completed ShowtimeCreate view.
    - Organized http files into a folder.
    

21-03-25

    Changes:
    - Adapted some views to migrate frontend to react.

6-03-25

    Changes:
    - Added showtime selector and seat selection page.

    TODO:
    - Fix the DB seat quantity to match the frontend one.
    - Fetch each displayed seat with the data sent from backend.
    - Manage the seat selection through the seats id instead of seat number.

25-02-25

    Changes:
    - Added styling to movie details page.

21-02-25

    Changes:
    - Added navbar and styling to index page.

20-02-25
    
    Changes:

    - Added reservation system to movie details page.

    Todo:
    
    - Add VIDEO_ID field to movie model, to display the movie's trailer with the youtube player api.
    


12-02-25

    Changes:

    - Changed index view to list all movies through DRF's TemplateHTMLRenderer.
    - Changed MovieDetails view to render the movie info into a html.

    Todo: Display details of a movie showtime when is clicked. DONE