@@ -1,11 +1,18 @@
+import { useNavigate } from "react-router-dom";
+
 import Card from 'react-bootstrap/Card';
-import "../styles/MovieCard.css";
 
 function MovieCard({ movie }) {
+  const navigate = useNavigate();
+
+  const handleClick = () => {
+    navigate(`/movie/${movie.id}`);
+  };
+
   return (
-    <Card style={{ width: '18rem', height: '30rem', marginBottom: '20px' }}>
+    <Card className="movie-card" onClick={handleClick}>
       <Card.Img variant="top" src={"default_poster.jpg"} />
-      <Card.Body>
+      <Card.Body className="movie-card-body">
         <Card.Title>{movie.title}</Card.Title>
       </Card.Body>
     </Card>
