@@ -4,6 +4,7 @@ import MovieCard from "../components/MovieCard";
 import Container from 'react-bootstrap/Container';
 import Row from 'react-bootstrap/Row';
 import Col from 'react-bootstrap/Col';
+import NavBar from "../components/NavBar";
 
 function Home() {
   const [movies, setMovies] = useState([]);
@@ -14,22 +15,25 @@ function Home() {
 
   const getMovies = () => {
     const res = api.get("/api/movies/")
-    .then((res) => res.data)
-    .then((data) => { setMovies(data); console.log(res.data); })
-    .catch((err) => alert(err));
-  };  
+      .then((res) => res.data)
+      .then((data) => { setMovies(data); console.log(data); })
+      .catch((err) => alert(err));
+  };
 
   return (
-    <Container>
-      <h1>Cinema</h1>
-      <Row>
-        {movies.map((movie) => (
-          <Col key={movie.id}>
-            <MovieCard movie={movie} />
-          </Col>
-        ))}
-      </Row>
-    </Container>
+    <>
+      <NavBar page="home" />
+
+      <Container className="movies">
+        <Row lg={4}>
+          {movies.map((movie) => (
+            <Col key={movie.id}>
+              <MovieCard movie={movie} />
+            </Col>
+          ))}
+        </Row>
+      </Container>
+    </>
   );
 }
 
