@@ -1,0 +1,9 @@
+.movie-details {
+    background-color: black;
+    opacity: 0.8;
+    color: white;
+
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 10px;
+}
