@@ -1,0 +1,11 @@
+.showtimes {
+    width: 100%;
+    height: 100px;
+    background-color: #000;
+}
+
+.carousel-item.active {
+    width: 100%;
+    height: 300px;
+    background-color: #000;
+}
