@@ -1,0 +1,38 @@
+/* Global styles */
+
+body {
+    background: linear-gradient(to bottom, black, red);
+    min-height: 100vh;
+    margin: 0;
+}
+
+.navbar, .movie-card  {
+    background-color: black !important;
+    opacity: 0.8 !important;
+    color: white !important;
+}
+
+/* Movies */
+
+.movies {
+    margin-top: 20px !important;
+}
+
+
+/* Movie card */
+
+.movie-card {
+    width: 18rem !important;
+    height: 30rem !important;
+    margin: 20px !important;
+    margin-top: 0px !important;
+}
+
+.movie-card-body > .card-title {
+    opacity: 1 !important;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
+    white-space: nowrap;
+    width: 100%;
+}
